<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.allen.library.SuperTextView
        android:id="@+id/suptertext_shaopping_duihuan2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:sLeftTextSize="12sp"
        app:sRightTextSize="12sp"
        app:sCenterTextSize="12sp"
        app:sLeftTextColor="@color/clolrTextNorenl"
        app:sRightTextColor="@color/clolrTextNorenl"
        app:sCenterTextColor="@color/clolrTextNorenl"
        app:sRightTextString="@string/shaoppTime"
        app:sLeftTextString="@string/shaoppDuiHuan"
        app:sCenterTextString="@string/shaoppMoDou"
        />


</LinearLayout>