<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    tools:context="com.tiantianle.activity.MessageAuthenticationActivity"
    android:orientation="vertical">

    <include layout="@layout/title_red"></include>


    <TextView
        android:id="@+id/tv_Transaction_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Transaction_prompt"
        />

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:text="123456789"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="37dp"
            android:text="@string/code"/>

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_border"
            android:textSize="13sp" />
        
        <Button
            android:id="@+id/bt_get_code"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/selector_button_confirm_change"
            android:textSize="13sp"
            android:padding="10dp"
            android:textColor="@color/colorText"
            android:text="@string/get_code"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="7dp"
            android:paddingRight="10dp"
            android:text="@string/Please_Password"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_border"
            android:textSize="13sp" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_confirm_change"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_button_confirm_change"
        android:text="@string/Confirm_Change"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/tv_Password_Authentication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/Password_Authentication"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp" />




</LinearLayout>