<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/TrendQuery"
        android:textColor="@color/colorText555555"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <EditText
            android:id="@+id/et_trends_query"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:textSize="15sp"
            android:inputType="number"
            android:layout_centerInParent="true"
            android:background="@drawable/shape_border" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/et_trends_query"
            android:text="@string/StatisticalRange"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/et_trends_query"
            android:textSize="15sp"
            android:text="@string/period" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/cancel"
            android:textSize="15sp"
            android:background="@drawable/selector_textview_dialog"
            android:textColor="@color/colorPrimary" />
        <View
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:background="@color/flowlayout_checked_tv_color">
        </View>

        <TextView
            android:id="@+id/tv_determine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/determine"
            android:textSize="15sp"
            android:background="@drawable/selector_textview_dialog"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>


</LinearLayout>