<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
              android:background="@color/colorCeMenuBack">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/pepoHead"
            android:src="@mipmap/pepohead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:id="@+id/vip"
            android:layout_toRightOf="@id/pepoHead"
            android:textColor="@color/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VIP"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/text_vip"
            android:textSize="17sp"
            android:text="156037"
            android:layout_toRightOf="@id/vip"
            android:textColor="@color/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/magicbean"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="17sp"
            android:layout_toRightOf="@id/pepoHead"
            android:layout_below="@id/vip"
            android:layout_width="wrap_content"
            android:text="@string/MagicBean"
            android:textColor="@color/colorText"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/text_magicbean"
            android:layout_below="@id/vip"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/magicbean"
            android:textColor="@color/colorText"
            android:text="1000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorTextGame"></View>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GameTimes"
        android:layout_marginLeft="10dp"
        android:textColor="@color/colorTextGame"
        android:textSize="18sp"/>
    <RadioGroup
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/jisu28"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableLeft="@mipmap/jisu"
            android:background="@drawable/menu_select_back"
            android:text="@string/Jisu28"
            android:button="@null"
            android:drawablePadding="10dp"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            />
        <RadioButton
            android:id="@+id/jianada28"
            android:layout_marginTop="5dp"
            android:layout_height="50dp"
            android:background="@drawable/menu_select_back"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:drawableLeft="@mipmap/jianada"
            android:text="@string/Canada28"
            android:button="@null"
            android:drawablePadding="10dp"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            />


        <RadioButton
            android:id="@+id/beijing28"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/menu_select_back"
            android:drawableLeft="@mipmap/beijing"
            android:text="@string/BeiJing28"
            android:button="@null"
            android:drawablePadding="10dp"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            />
        <RadioButton
            android:id="@+id/indiana"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/menu_select_back"
            android:drawableLeft="@mipmap/indiana"
            android:text="@string/Indiana"
            android:button="@null"
            android:drawablePadding="10dp"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            />
        <RadioButton
            android:id="@+id/hongbao"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableLeft="@mipmap/hongbao"
            android:text="@string/HongBao"
            android:background="@drawable/menu_select_back"
            android:button="@null"
            android:drawablePadding="10dp"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            />
    </RadioGroup>
</LinearLayout>