<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_jing_dong_eka"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorText"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.tiantianle.activity.JingDongEka">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/colorBackMemu"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/img_jingdongEka_back"
            android:layout_width="wrap_content"
            android:src="@mipmap/navback"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:text="@string/jingDongKaMi"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/duihuanMianZhi"
            android:textSize="14sp"
            android:layout_height="wrap_content"/>

        <com.dalong.flowlayout.FlowLayout
            android:id="@+id/mFlowLayout"
            app:horizontalSpacing="15dp"
            app:verticalSpacing="15dp"
            app:textSize="16sp"
            app:equally="true"
            app:stype="select"
            app:isSingle="true"
            app:flowGravity="center"
            app:itemPaddingLeft="5dp"
            app:itemPaddingTop="2dp"
            app:itemPaddingRight="5dp"
            app:itemPaddingBottom="2dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:flowBackground="@drawable/jingdongeka_radiobutton_back"
            app:textColor="@color/clolrTextNorenl"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/duihuanSuoXuMoDou"
            />
        <TextView
            android:id="@+id/text_suoXu_modou_jingdongeka"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorBackMemu"
            android:layout_height="wrap_content"
            android:text="10000000"/>

        <TextView
            android:text="@string/MagicBean"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"

    >
      <TextView
          android:text="@string/duihuanjyPassWord"
          android:textSize="14sp"
          android:layout_gravity="center_vertical"
          android:layout_marginLeft="10dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edittext_jingdongeka"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/radiobutton_back_shap_nomal"
        android:layout_height="40dp"/>
</LinearLayout>

    <Button
        android:id="@+id/btn_queren_jingdongeka"
        android:text="@string/duihuanConfirm"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/btn_qurenduihuan_jingdongeka"
        android:textColor="@color/colorText"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
<TextView
    android:text="@string/duihuanNewDongTai"
    android:textSize="16sp"
    android:layout_marginTop="10dp"
    android:layout_width="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_height="wrap_content"/>

    <ListView
        android:id="@+id/listview_jingdongeka"
        android:layout_width="300dp"
        android:scrollbars="none"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1"></ListView>



</LinearLayout>
