<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.tiantianle.activity.ForgotPasswordActivity">

    <include layout="@layout/title_red"></include>


    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/stroke_unchecked_color"></View>

    <EditText
        android:id="@+id/et_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@null"
        android:drawableLeft="@mipmap/number"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:hint="@string/Input_Number"
        android:inputType="number"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/clolrTextNorenl"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:background="@null"
            android:drawableLeft="@mipmap/validation"
            android:drawablePadding="15dp"
            android:gravity="center_vertical"
            android:hint="@string/Please_Code"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:textSize="15sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="35dp"
            android:background="@color/clolrTextNorenl"></View>

        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/Obtain_Code"
            android:gravity="center"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/clolrTextNorenl"></View>

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@null"
        android:drawableLeft="@mipmap/password"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:hint="@string/Please_New_Password"
        android:inputType="textPassword"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/clolrTextNorenl"></View>

    <Button
        android:id="@+id/bt_reset_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_button_confirm_change"
        android:text="@string/Reset_Password"
        android:textColor="@color/colorText" />

</LinearLayout>